Add some Pufferfish patch