@@ -19,6 +19,9 @@ allprojects {
     tasks.withType(JavaCompile).configureEach {
         options.encoding = 'UTF-8'
         options.warnings = false
+        options.compilerArgs.addAll([
+                '--add-modules=jdk.incubator.vector'
+        ])
         options.compilerArgs += "-Xlint:-removal"
     }
 }
